# floor_recognition

./: .env.example  CREDITENTIALS.md  Dockerfile  Dockerfile_Tensorflow1_РАБОТАЕТ  README.md  pyproject.toml
floor-detection/scripts/: requirements.txt  requirements3.7.txt  requirements_old.txt
src/: __init__.py
src/core/: exceptions.py  settings.py
src/data/: repositories.py
src/dependencies/: dependencies.py
src/domain/: entities.py  repositories.py  usecases.py
src/presentation/: app.py  requests.py  routers.py
