[tool.poetry]
name = "floor-recognition"
version = "0.1.0"
description = ""
authors = ["Nikita Savin <nikita.a.savin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
fastapi = {extras = ["all"], version = "^0.115.6"}
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
